[package]
name = "sp-gtk4-loading-logos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#  C crossover.
[lib]
name = "sp_gtk4_loading_logos"
crate-type = ["staticlib"]

[profile .release-with-debug]
inherits = "release"
debug = true


[dependencies]
gtk4 = "0.9.1"
libc = "0.2.158"
